fixed background blend mode on safari mobile

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -233,7 +233,7 @@ section {
   background-repeat: repeat;
   background-size: 100%;
   background-position: center;
-  background-blend-mode: overlay;
+  background-blend-mode: saturation;
 
   header {
 
